--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <title>[Project Name]</title>
-  <meta name="description" content="The demo description.">
-  <meta name="keywords" content="these,are,the,meta,keywords">
+  <title>jQuery.Scrollaround</title>
+  <meta name="description" content="Scrolling for single page websites.">
+  <meta name="keywords" content="jquery, javascript, scroll, to, single, multiple, page">
  
   <!-- Libraries -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
@@ -22,51 +22,21 @@
   <a href="http://www.wtmworldwide.com" target="_blank" class="logo">We the Media</a>
   
   <header>
-    <h1><a class="title" href="#">jQuery.Shapeshift</a></h1>
+    <h1><a class="title" href="#">jQuery.Scrollaround</a></h1>
     <div class="details">
       <a class="toggle" href="#">Details</a>
       <ul>
         <li><strong>Grid System:</strong> All items flow from left to right, top to bottom.</li>
-        <li><strong>Drag &amp; Drop:</strong> Click and drag elements to move them, even to different containers.</li>
-        <li><strong>Responsive:</strong> Resize the browser window so see the grid change with the new dimensions.</li>
-        <li><strong>Media Queries:</strong> Work normally with responsive grids, watch as the page shifts with the new attributes.</li>
-        <li><strong>Works on Touch:</strong> Enable drag and drop on touch devices by using the included <a href="http://touchpunch.furf.com/">jQuery UI Touch Punch</a>.</li>
       </ul>
     </div>
     <div class="hr"></div>
-
-
-    <ul class="options">
-      <li>
-        <h4>Options</h4>
-        <ul class="btn-group toggle">
-          <li class="active">Do Something</li>
-          <li>Something Else</li>
-        </ul>
-      </li>
-      <li>
-        <h4>Other Stuff</h4>
-        <ul class="btn-group">
-          <li>Show it</li>
-          <li>Hide it</li>
-          <li>Do the Moonwalk</li>
-        </ul>
-      </li>
-      <li>
-        <h4>Controls</h4>
-        <ul class="btn-group">
-          <li>Stop</li>
-          <li>Hammertime</li>
-        </ul>
-      </li>
-    </ul>
   </header>
 
   <div class="content">
   </div>
 
   <footer>
-    <div>jQuery.Shapeshift uses the <a href="https://github.com/McPants/jquery.shapeshift/blob/master/LICENSE">MIT license</a></div>
+    <div>jQuery.Scrollaround uses the <a href="https://github.com/McPants/jquery.shapeshift/blob/master/LICENSE">MIT license</a></div>
     <div>Placeholder images provided by <a href="http://fpoimg.com">FPOImg.com</a> and <a href="http://placekitten.com">Placekitten.com</a>.</div>
   </footer>
 </body>
