--- a/demo/index.html
+++ b/demo/index.html
@@ -36,8 +36,7 @@
   </div>
 
   <footer>
-    <div>jQuery.Scrollaround uses the <a href="https://github.com/McPants/jquery.shapeshift/blob/master/LICENSE">MIT license</a></div>
-    <div>Placeholder images provided by <a href="http://fpoimg.com">FPOImg.com</a> and <a href="http://placekitten.com">Placekitten.com</a>.</div>
+    <div>jQuery.Scrollaround uses the <a href="https://github.com/wtm/jquery.scrollaround/blob/master/LICENSE">MIT license</a></div>
   </footer>
 </body>
 </html>
