--- a/demo/index.html
+++ b/demo/index.html
@@ -13,9 +13,14 @@
 
   <!-- Javascript -->
   <script src="template/javascript/template.js"></script>
+
+  <!-- Core Files -->
+  <script type="text/JavaScript" src="../core/jquery.scrollaround.js"></script>
+
+  <!-- Demo Files -->
+  <script type="text/JavaScript" src="demo.js"></script>
 </head>
 <body>
-  <div class="overlay"></div>
   <a href="https://github.com/wtm/demo-template" class="fork-me">
     <img src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub">
   </a>
