Converted to coffeescript

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,9 +15,11 @@
   <script src="template/javascript/template.js"></script>
 
   <!-- Core Files -->
+  <script type="text/JavaScript" src="../core/jquery.scroll_to.js"></script>
   <script type="text/JavaScript" src="../core/jquery.scrollaround.js"></script>
 
   <!-- Demo Files -->
+  <link rel="stylesheet" type="text/css" href="demo.css"></script>
   <script type="text/JavaScript" src="demo.js"></script>
 </head>
 <body>
@@ -37,8 +39,11 @@
     <div class="hr"></div>
   </header>
 
-  <div class="content">
-  </div>
+  <ul class="content">
+    <li class="first">First Page</li>
+    <li class="second">Second Page</li>
+    <li class="third">Third Page</li>
+  </ul>
 
   <footer>
     <div>jQuery.Scrollaround uses the <a href="https://github.com/wtm/jquery.scrollaround/blob/master/LICENSE">MIT license</a></div>
