Finished with the scroll part, it works wonderfully

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>jQuery.Scrollaround</title>
+  <title>jQuery.SnapScroll</title>
   <meta name="description" content="Scrolling for single page websites.">
   <meta name="keywords" content="jquery, javascript, scroll, to, single, multiple, page">
  
@@ -29,7 +29,7 @@
   <a href="http://www.wtmworldwide.com" target="_blank" class="logo">We the Media</a>
   
   <header>
-    <h1><a class="title" href="#">jQuery.Scrollaround</a></h1>
+    <h1><a class="title" href="#">jQuery.SnapScroll</a></h1>
     <div class="details">
       <a class="toggle" href="#">Details</a>
       <ul>
@@ -40,9 +40,11 @@
   </header>
 
   <ul class="content">
-    <li class="first">First Page</li>
-    <li class="second">Second Page</li>
-    <li class="third">Third Page</li>
+    <li class="third"><h1>First Page</h1></li>
+    <li class="second"><h1>Second Page</h1></li>
+    <li class="first"><h1>Third Page</h1></li>
+    <li class="second"><h1>Fourth Page</h1></li>
+    <li class="third"><h1>Fifth Page</h1></li>
   </ul>
 
   <footer>
