--- a/demo/index.html
+++ b/demo/index.html
@@ -23,13 +23,13 @@
   <script type="text/JavaScript" src="demo.js"></script>
 </head>
 <body>
-  <a href="https://github.com/wtm/demo-template" class="fork-me">
+  <a href="https://github.com/wtm/jquery.snapscroll" class="fork-me">
     <img src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub">
   </a>
   <a href="http://www.wtmworldwide.com" target="_blank" class="logo">We the Media</a>
   
   <header>
-    <h1><a class="title" href="#">jQuery.SnapScroll</a></h1>
+    <h1><a class="title" href="https://github.com/wtm/jquery.snapscroll">jQuery.SnapScroll</a></h1>
     <div class="details">
       <a class="toggle" href="#">Details</a>
       <ul>
@@ -48,7 +48,7 @@
   </ul>
 
   <footer>
-    <div>jQuery.Scrollaround uses the <a href="https://github.com/wtm/jquery.scrollaround/blob/master/LICENSE">MIT license</a></div>
+    <div>jQuery.SnapScroll uses the <a href="https://github.com/wtm/jquery.snapscroll/blob/master/LICENSE">MIT license</a></div>
   </footer>
 </body>
 </html>
