Elastic scroll to next page added

--- a/demo/index.html
+++ b/demo/index.html
@@ -50,5 +50,9 @@
   <footer>
     <div>jQuery.SnapScroll uses the <a href="https://github.com/wtm/jquery.snapscroll/blob/master/LICENSE">MIT license</a></div>
   </footer>
+
+  <div class="scroller" data-url="http://www.google.com">
+    <h3>Scroll to continue to next page</h3>
+  </div>
 </body>
 </html>
