--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
 
   <!-- Core Files -->
   <script type="text/JavaScript" src="../core/jquery.scroll_to.js"></script>
-  <script type="text/JavaScript" src="../core/jquery.scrollaround.js"></script>
+  <script type="text/JavaScript" src="../core/jquery.snapscroll.js"></script>
 
   <!-- Demo Files -->
   <link rel="stylesheet" type="text/css" href="demo.css"></script>
@@ -33,7 +33,9 @@
     <div class="details">
       <a class="toggle" href="#">Details</a>
       <ul>
-        <li><strong>Grid System:</strong> All items flow from left to right, top to bottom.</li>
+        <li><strong>Snaps to Containers:</strong> Scroll into the first container to begin.</li>
+        <li><strong>Moves with Arrow Keys:</strong> As well as page up, page down, and space bar.</li>
+        <li><strong>For Single Page Websites:</strong> SnapScroll only works with containers set to 100% window height.</li>
       </ul>
     </div>
     <div class="hr"></div>
