--- a/demo/index.html
+++ b/demo/index.html
@@ -7,20 +7,18 @@
   <!-- Libraries -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 
-  <!-- Stylesheets -->
-  <link rel="stylesheet" type="text/css" href="template/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="template/css/template.css">
+  <!-- Template Files -->
+  <link rel="stylesheet" type="text/css" href="template/stylesheets/reset.css">
+  <link rel="stylesheet" type="text/css" href="template/stylesheets/template.css">
+  <script src="template/javascripts/template.js"></script>
 
-  <!-- Javascript -->
-  <script src="template/javascript/template.js"></script>
-
-  <!-- Core Files -->
-  <script type="text/JavaScript" src="../core/jquery.scroll_to.js"></script>
+  <!-- SnapScroll Core Files -->
+  <script type="text/JavaScript" src="../core/dependencies/jquery.scroll_to.js"></script>
   <script type="text/JavaScript" src="../core/jquery.snapscroll.js"></script>
 
   <!-- Demo Files -->
-  <link rel="stylesheet" type="text/css" href="demo.css"></script>
-  <script type="text/JavaScript" src="demo.js"></script>
+  <link rel="stylesheet" type="text/css" href="stylesheets/demo.css"></script>
+  <script type="text/JavaScript" src="javascripts/demo.js"></script>
 </head>
 <body>
   <a href="https://github.com/wtm/jquery.snapscroll" class="fork-me">
