Added minified, moved some files around, minor bug changes

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,8 +17,8 @@
   <script type="text/JavaScript" src="../core/jquery.snapscroll.js"></script>
 
   <!-- Demo Files -->
-  <link rel="stylesheet" type="text/css" href="stylesheets/demo.css"></script>
-  <script type="text/JavaScript" src="javascripts/demo.js"></script>
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/demo.css"></script>
+  <script type="text/JavaScript" src="assets/javascripts/demo.js"></script>
 </head>
 <body>
   <a href="https://github.com/wtm/jquery.snapscroll" class="fork-me">
