Removed extra </script> tag

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
   <script type="text/JavaScript" src="../core/jquery.snapscroll.js"></script>
 
   <!-- Demo Files -->
-  <link rel="stylesheet" type="text/css" href="assets/stylesheets/demo.css"></script>
+  <link rel="stylesheet" type="text/css" href="assets/stylesheets/demo.css">
   <script type="text/JavaScript" src="assets/javascripts/demo.js"></script>
 </head>
 <body>
