--- a/demo/index.html
+++ b/demo/index.html
@@ -5,12 +5,12 @@
   <meta name="keywords" content="jquery, javascript, scroll, to, single, multiple, page">
  
   <!-- Libraries -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+  <script type="text/JavaScript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 
   <!-- Template Files -->
   <link rel="stylesheet" type="text/css" href="template/stylesheets/reset.css">
   <link rel="stylesheet" type="text/css" href="template/stylesheets/template.css">
-  <script src="template/javascripts/template.js"></script>
+  <script type="text/JavaScript" src="template/javascripts/template.js"></script>
 
   <!-- SnapScroll Core Files -->
   <script type="text/JavaScript" src="../core/dependencies/jquery.scroll_to.js"></script>
